Fixed Overflow of Question Bank Issue

--- a/CSS/Create_Test.css
+++ b/CSS/Create_Test.css
@@ -39,13 +39,26 @@
 
 #Question_to_add_MCQ_div
 {
+    border-radius: 10px;
     position: absolute;
-    top : 25%;
-    left : 5%;
+    border-style: dotted dashed solid double;
+    width: 450px;
+    height: 200px;
+    margin-left: 2%;
+    margin-top: 8%;
+    z-index: 1;  
+    display: flex;
+    flex-direction: column;
+    min-height: 57vh;
+    overflow: auto;
+    background-color:#e8e0d77e
 }
 
 #Question_to_add_MCQ_table
 {
+    position: relative;
+    left: 5%;
+    top : 5%;
     background-color: rgba(240, 248, 255, 0.582);
     border: solid black 3px; 
     width: 400px;
